--- a/dmz/dmz1/Dockerfile
+++ b/dmz/dmz1/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:24.04
 
-RUN apt-get update && apt-get install -y nmap openssh-server net-tools iputils-ping traceroute vim nano iproute2 iptables pkg-config
+RUN apt-get update && apt-get install -y nmap openssh-server tcpdump net-tools iputils-ping traceroute vim nano iproute2 iptables pkg-config apache2
 
 RUN mkdir /var/run/sshd
 
@@ -10,6 +10,9 @@ RUN sed -ri 's/^#?PermitRootLogin\s+.*/PermitRootLogin yes/' /etc/ssh/sshd_confi
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 EXPOSE 22
+
+# Copy the HTML file to the Apache directory
+COPY ./index.html /var/www/html/index.html
 
 COPY ./start.sh .
 
