--- a/dmz/dmz2/Dockerfile
+++ b/dmz/dmz2/Dockerfile
@@ -9,7 +9,7 @@ RUN sed -ri 's/^#?PermitRootLogin\s+.*/PermitRootLogin yes/' /etc/ssh/sshd_confi
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-EXPOSE 22
+EXPOSE 22 80
 
 # Copy the HTML file to the Apache directory
 COPY ./index.html /var/www/html/index.html
