--- a/external/Dockerfile
+++ b/external/Dockerfile
@@ -15,10 +15,8 @@ RUN apt-get update && apt-get install -y \
     iproute2 \
     iptables \
     pkg-config \
-    apache2 && \
-    openssl && \
-    # Clean up to reduce image size
-    apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    apache2 \
+    openssl
 
 # Create directory for SSH daemon
 RUN mkdir /var/run/sshd
@@ -26,10 +24,13 @@ RUN mkdir /var/run/sshd
 # Set root password
 RUN echo 'root:root' | chpasswd
 
-# Create SSL certificates
-RUN mkdir -p /etc/ssl/private && \
-    mkdir -p /etc/ssl/certs && \
-    openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/apache-selfsigned.key -out /etc/ssl/certs/apache-selfsigned.crt
+# Create SSL certificates with default subject to avoid prompts
+RUN mkdir -p /etc/ssl/private /etc/ssl/certs && \
+    openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/ssl/private/apache-selfsigned.key \
+    -out /etc/ssl/certs/apache-selfsigned.crt \
+    -subj "/C=US/ST=State/L=Location/O=Organization/OU=Unit/CN=10.5.0.20"
+
 
 # Enable Apache SSL module
 RUN a2enmod ssl
@@ -37,11 +38,12 @@ RUN a2enmod ssl
 # Configure SSH settings
 RUN sed -ri 's/^#?PermitRootLogin\s+.*/PermitRootLogin yes/' /etc/ssh/sshd_config
 
-# Expose ports for SSH and HTTP
-EXPOSE 22 80 443
-
+# Copy Apache SSL site configuration and enable it
 COPY ./default-ssl.conf /etc/apache2/sites-available/default-ssl.conf
 RUN a2ensite default-ssl.conf
+
+# Expose ports for SSH, Apache, and HTTPS
+EXPOSE 80 2222 443
 
 # Copy the start script to the container
 COPY ./start.sh /start.sh
